# insurance-holder

./: README.md  pyproject.toml
src/insurance_holder/: app.py
src/insurance_holder/data/static/js/: countdown-create.js  countdown.js
src/insurance_holder/data/templates/: base.html  create_countdown.html  list_countdowns.html
src/insurance_holder/etc/: consts.py  enums.py
src/insurance_holder/model/: __init__.py  base.py  code.py  countdown.py
src/insurance_holder/router/: __init__.py  countdown.py  root.py  utils.py
src/insurance_holder/service/database/: __init__.py  service.py  tables.py
